gitops/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: tmpl-gitops
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: tmpl-gitops-canary-svc
      stableService: tmpl-gitops-stable-svc
      trafficRouting:
        nginx:
          stableIngress: tmpl-gitops-ing 
      steps:
      - setWeight: 50
      - pause: { duration: 30s }
      - analysis:
          templates:
            - templateName: tmpl-gitops
          args:
            - name: canary-hash
              valueFrom:
                podTemplateHashValue: Latest
            - name: baseline-hash
              valueFrom:
                podTemplateHashValue: Stable
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: tmpl-gitops
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus_io_path: '/mgmt/prometheus'
        prometheus_io_port: '8088'
      labels:
        app: tmpl-gitops
    spec:
      containers:
      - name: tmpl-gitops
        image: docker.io/opsmxdev/issuegen:v3.0.4
        ports:
        - name: http
          containerPort: 8088
          protocol: TCP
