gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tmpl-gitops-canary-svc
spec:
  ports:
  - port: 80
    targetPort: 8088
    protocol: TCP
  selector:
    app: tmpl-gitops1

---
apiVersion: v1
kind: Service
metadata:
  name: tmpl-gitops-stable-svc
spec:
  ports:
  - port: 80
    targetPort: 8088
    protocol: TCP
  selector:
    app: tmpl-gitops1
